# bevy_university

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_wasm.sh  rebase_all_branches_from_main.sh  server.py
.devcontainer/: devcontainer.json
build_pdf/: build_pdf.sh
slides/: bevy_university.html
slides/images/: super-mario-64.avif
slides/templates/: bevy_university.html
src/: asteroids.rs  camera.rs  main.rs  states.rs  vessel.rs
